Added Semantic UI for styling.

--- a/server/public/views/partials/header.ejs
+++ b/server/public/views/partials/header.ejs
@@ -3,10 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>RESTful Blog</title>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.css">
 </head>
 <body>
-  <nav>
-    <div>
-      <a class="navbar-brand" href="/">RESTful Blog</a>
+  <div class="ui fixed inverted menu">
+    <div class="ui container">
+      <div class="header item"><i class="newspaper icon"></i>Blog Site</div>
+      <a href="/" class="item">Home</a>
+      <a href="/blogs/new" class="item">New Post</a>
     </div>
-  </nav>
+  </div>
