Added NEW and CREATE routes

--- a/server/public/views/index.ejs
+++ b/server/public/views/index.ejs
@@ -8,7 +8,7 @@
   </header>
 
     <% blogs.forEach(function(blog){ %>
-    <div>
+    <div class="ui main text container segment">
       <h2><%= blog.title %></h2>
       <img src="<%= blog.image_url %>">
       <h3><%= blog.created %></h3>
