--- a/server/public/views/new.ejs
+++ b/server/public/views/new.ejs
@@ -3,12 +3,13 @@
 <div class="ui main text container segment">
   <div class="ui huge header"> New Blog Post</div>
   <div class="">
-    <form class="" action="/blogs" method="post">
-
+    <form class="" action="/blogs" method="POST">
+      <input type="text" name="title" placeholder="Blog title">
+      <input type="text" name="image_url" placeholder="Image URL">
+      <input type="text" name="blog_post" placeholder="Enter blog post here">
+      <input type="submit" name="submit" value="Submit">
     </form>
   </div>
-
-
 </div>
 
 <% include partials/footer %>
