Styled add new post form. Added SHOW route for a single post

--- a/server/public/views/index.ejs
+++ b/server/public/views/index.ejs
@@ -13,6 +13,7 @@
       <img src="<%= blog.image_url %>">
       <h3><%= blog.created %></h3>
       <p><%= blog.blog_post%></p>
+      <a href="/blogs/<%= blog.id %>">Read more</a>
     </div>
     <% }) %>
 
