--- a/server/public/views/index.ejs
+++ b/server/public/views/index.ejs
@@ -11,8 +11,8 @@
     <div class="ui main text container segment">
       <h2><%= blog.title %></h2>
       <img src="<%= blog.image_url %>">
-      <h3><%= blog.created %></h3>
-      <p><%= blog.blog_post%></p>
+      <h3><%= blog.created.toDateString() %></h3>
+      <p><%= blog.blog_post.substring(0,100) %>...</p>
       <a href="/blogs/<%= blog.id %>">Read more</a>
     </div>
     <% }) %>
