--- a/server/public/views/show.ejs
+++ b/server/public/views/show.ejs
@@ -2,10 +2,19 @@
 
 <% blogs.forEach(function(blog){ %>
 <div class="ui main text container segment">
-  <h2><%= blog.title %></h2>
-  <img src="<%= blog.image_url %>">
-  <h3><%= blog.created %></h3>
-  <p><%= blog.blog_post%></p>
+  <div class="ui huge header"> <%= blog.title %> </div>
+  <div class="ui top attached">
+    <div class="item">
+      <img class="ui centered rounded image" src="<%= blog.image_url %>">
+    </div>
+    <div class="content">
+      <h3><%= blog.created.toDateString() %></h3>
+    </div>
+    <div class="description">
+      <p><%= blog.blog_post%></p>
+    </div>
+  </div>
+
 </div>
 <% }) %>
 
