Added edit button to show page for single blog post

--- a/server/public/views/show.ejs
+++ b/server/public/views/show.ejs
@@ -14,7 +14,7 @@
       <p><%= blog.blog_post%></p>
     </div>
   </div>
-
+  <a href="/blogs/<%= blog.id %>/edit" class="ui violet big basic button">Edit Post</a>
 </div>
 <% }) %>
 
