--- a/server/public/views/index.ejs
+++ b/server/public/views/index.ejs
@@ -13,7 +13,7 @@
       <img src="<%= blog.image_url %>">
       <h3><%= blog.created.toDateString() %></h3>
       <p><%= blog.blog_post.substring(0,100) %>...</p>
-      <a href="/blogs/<%= blog.id %>">Read more</a>
+      <a href="/blogs/<%- blog.id %>">Read more</a>
     </div>
     <% }) %>
 
